# cifar-100

./: .gitignore  .pylintrc  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/preprocessed/test/: .gitignore
data/preprocessed/train/: .gitignore
data/raw/: classes.txt
data/splitted/: .gitignore
models/: .gitignore
notebooks/: 00-20250212-evaluation.ipynb  00-20250212-exploration.ipynb
scripts/: vast.sh  vast_init.sh  vast_train_cnn.sh  vast_train_mobilenet.sh  vast_train_resnet50.sh
src/: setup.py
src/cifar_100/: evaluate.py  fetch_data.py  split.py
src/cifar_100/dl/: evaluate_cnn.py  evaluate_mobilenet.py  evaluate_resnet50.py  preprocess_cnn.py  preprocess_mobilenet.py  preprocess_resnet50.py  train_cnn.py  train_mobilenet.py  train_resnet50.py
